# DentalAnalyzer

./: Analyzer.cpp  Analyzer.h  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  objects.h  parameter.h  result.cpp  result.h  utility.cpp  utility.h
TestFiles/: axial_points.pp  gingiva_points.pp  margin_points.pp  occlusal_points.pp
doc/: developer_guide.md  metric.md  tutorial.md
